[tool.poetry]
name = "Spooktober"
version = "1.0.0"
description = ""
authors = ["Codemonkey51 <contact@codemonkey51.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
blend-modes = "^2.1.0"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
